# DetoursCMake

./: .gitignore  CMakeLists.txt  Makefile
